<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/home"
    android:icon="@drawable/ic_home"
    android:title="@string/home" />

  <item
    android:id="@+id/like"
    android:icon="@drawable/ic_heart"
    android:title="@string/like" />

  <item
    android:id="@+id/ofriends"
    android:icon="@drawable/ic_ofriends"
    android:title="@string/ofriends" />

  <item
    android:id="@+id/more"
    android:icon="@drawable/ic_more"
    android:title="@string/more" />

<!--  <item-->
<!--    android:id="@+id/cosmeticsFragment"-->
<!--    android:icon="@drawable/cosmetics"-->
<!--    android:title="@string/cosmetics" />-->
<!--  <item-->
<!--    android:id="@+id/luxuriesFragment"-->
<!--    android:icon="@drawable/luxuries"-->
<!--    android:title="@string/luxuries" />-->
<!--  <item-->
<!--    android:id="@+id/legoFragment"-->
<!--    android:icon="@drawable/lego"-->
<!--    android:title="@string/lego" />-->

</menu>