<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vmHome"
            type="com.gibeom.ofriendsmobile.home.ui.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/iVBackground"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/color_83786f"
            android:contentDescription="bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tVPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:onClick='@{() -> vmHome.setSelectedMajorLifeTab(0, "[0,19]", "play")}'
            android:paddingBottom="4dp"
            android:text="@string/W0002"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/second_sub"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/iVBackground"
            app:setBorderBackground="@{vmHome.selectedLifeMajorTab == 0 ? true : false}"
            app:textStyle='@{vmHome.selectedLifeMajorTab == 0 ? "bold" : "normal"}' />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tVLearning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:onClick='@{() -> vmHome.setSelectedMajorLifeTab(1, "[0,19]", "learn")}'
            android:paddingBottom="4dp"
            android:text="@string/W0003"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/second_sub"
            app:layout_constraintBottom_toBottomOf="@id/tVPlaying"
            app:layout_constraintLeft_toRightOf="@id/tVPlaying"
            app:layout_constraintTop_toTopOf="@id/tVPlaying"
            app:setBorderBackground="@{vmHome.selectedLifeMajorTab == 1 ? true : false}"
            app:textStyle='@{vmHome.selectedLifeMajorTab == 1 ? "bold" : "normal"}' />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tVCoWorking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:onClick='@{() -> vmHome.setSelectedMajorLifeTab(2, "[0,19]", "share")}'
            android:paddingBottom="4dp"
            android:text="@string/W0004"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/second_sub"
            app:layout_constraintBottom_toBottomOf="@id/tVLearning"
            app:layout_constraintLeft_toRightOf="@id/tVLearning"
            app:layout_constraintTop_toTopOf="@id/tVLearning"
            app:setBorderBackground="@{vmHome.selectedLifeMajorTab == 2 ? true : false}"
            app:textStyle='@{vmHome.selectedLifeMajorTab == 2 ? "bold" : "normal"}' />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rVLifeList"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/iVBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tVPlaying" />

        <ProgressBar
            android:id="@+id/pBFilteredPrd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:isLoading="@{vmHome.getLifeNetworkStatus}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iVBackground"
            app:layout_constraintWidth_percent="0.15" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rVFilteredPrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iVBackground"
            app:spanCount="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>